...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nOI-P7-ZVy">
                                <rect key="frame" x="16" y="44" width="120" height="36"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="PK3-0p-VIy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="History">
                                    <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="Hvb-YM-0mK" kind="popoverPresentation" popoverAnchorView="nOI-P7-ZVy" id="Esa-Kj-3LK">
                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                    </segue>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEX-K7-ubw">
                                <rect key="frame" x="16" y="44" width="120" height="36"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="sIX-EH-5aO"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Back">
                                    <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="BackBtnPressed:" destination="Hvb-YM-0mK" eventType="touchUpInside" id="IkZ-cj-bMs"/>
                                </connections>
                            </button>
...
                                    <color key="titleColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="ClearAllBtnPressed:" destination="Hvb-YM-0mK" eventType="touchUpInside" id="saQ-qy-TPS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xy9-lh-QnJ" userLabel="Settings">
                                <rect key="frame" x="189" y="44" width="36" height="36"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="NoC-vA-Xnh"/>
                                    <constraint firstAttribute="width" constant="36" id="mvw-vm-tw7"/>
                                </constraints>
                                <state key="normal" image="Settings">
...
